; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/mm/ptdump/extr_hashpagetable.c_walk_pud.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/mm/ptdump/extr_hashpagetable.c_walk_pud.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pg_state = type { i32 }

@PTRS_PER_PUD = common dso_local global i32 0, align 4
@PUD_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pg_state*, i32*, i64)* @walk_pud to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @walk_pud(%struct.pg_state* %0, i32* %1, i64 %2) #0 {
  %4 = alloca %struct.pg_state*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store %struct.pg_state* %0, %struct.pg_state** %4, align 8
  store i32* %1, i32** %5, align 8
  store i64 %2, i64* %6, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = call i32* @pud_offset(i32* %10, i32 0)
  store i32* %11, i32** %7, align 8
  store i32 0, i32* %9, align 4
  br label %12

12:                                               ; preds = %33, %3
  %13 = load i32, i32* %9, align 4
  %14 = load i32, i32* @PTRS_PER_PUD, align 4
  %15 = icmp ult i32 %13, %14
  br i1 %15, label %16, label %38

16:                                               ; preds = %12
  %17 = load i64, i64* %6, align 8
  %18 = load i32, i32* %9, align 4
  %19 = load i32, i32* @PUD_SIZE, align 4
  %20 = mul i32 %18, %19
  %21 = zext i32 %20 to i64
  %22 = add i64 %17, %21
  store i64 %22, i64* %8, align 8
  %23 = load i32*, i32** %7, align 8
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @pud_none(i32 %24)
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %32, label %27

27:                                               ; preds = %16
  %28 = load %struct.pg_state*, %struct.pg_state** %4, align 8
  %29 = load i32*, i32** %7, align 8
  %30 = load i64, i64* %8, align 8
  %31 = call i32 @walk_pmd(%struct.pg_state* %28, i32* %29, i64 %30)
  br label %32

32:                                               ; preds = %27, %16
  br label %33

33:                                               ; preds = %32
  %34 = load i32, i32* %9, align 4
  %35 = add i32 %34, 1
  store i32 %35, i32* %9, align 4
  %36 = load i32*, i32** %7, align 8
  %37 = getelementptr inbounds i32, i32* %36, i32 1
  store i32* %37, i32** %7, align 8
  br label %12

38:                                               ; preds = %12
  ret void
}

declare dso_local i32* @pud_offset(i32*, i32) #1

declare dso_local i32 @pud_none(i32) #1

declare dso_local i32 @walk_pmd(%struct.pg_state*, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
